more updates, fixed librt moved win32 guard, added threads and rt to pkg-config source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,13 @@ endif()
 
 endif( NOT WIN32 )
 
-
+##
+# need this for examples and testcases
+## 
+find_package( Threads )
+##
+# load git submodules
+##
 include( CheckGitDep )
 
 add_subdirectory( src )
