--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,17 @@ list( APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake )
 
 include(Colors)
 include(CheckCXXCompilerFlag)
+
 CHECK_CXX_COMPILER_FLAG("-faligned-new" HAS_ALIGNED_NEW)
 if (HAS_ALIGNED_NEW)
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -faligned-new")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -faligned-new")
+    ##
+    # and for the case where no release/debug is added
+    # adding to general definitions given it seems the
+    # only way to silence the warnings.
+    ##
+    add_definitions( "-faligned-new" )
 endif()
     
 
@@ -32,28 +39,6 @@ add_subdirectory(helpers)
 add_definitions( "-DL1D_CACHE_LINE_SIZE=${L1D_LINE_SIZE}" ) 
 
 
-##
-# get pkg-config for install - for unix/linux/mac only 
-##
-if( NOT WIN32 )
-mark_as_advanced( PKG_CONFIG_PATHWAY )
-set( PKG_CONFIG_PATH "" CACHE STRING "Set the pkg-config path, othwerwise will figure out" )
-
-if( NOT PKG_CONFIG_PATH )
-execute_process( COMMAND  pkg-config --variable pc_path pkg-config 
-                 COMMAND  tr ':' '\n' 
-                 COMMAND  head -n 1
-                 OUTPUT_VARIABLE LOCAL_PKG_CONFIG_PATHWAY )
-set( PKG_CONFIG_PATH ${LOCAL_PKG_CONFIG_PATHWAY} )
-endif()
-
-if( CMAKE_INSTALL_PREFIX )  
-message( WARNING "You should set ${RED}PKG_CONFIG_PATH=${CMAKE_INSTALL_PREFIX}/pkgconfig/:$PKG_CONFIG_PATH ${ColourReset} when installing to non-standard prefix for pkg-config to work correctly!" )
-else()
-message( STATUS "Setting PKG_CONFIG_PATH to: ${PKG_CONFIG_PATH}" )
-endif()
-
-endif( NOT WIN32 )
 
 ##
 # need this for examples and testcases
@@ -63,6 +48,7 @@ find_package( Threads )
 # load git submodules
 ##
 include( CheckGitDep )
+
 
 add_subdirectory( src )
 add_subdirectory( raftinc )
@@ -75,7 +61,7 @@ endif( BUILD_EXAMPLES )
 
 
 mark_as_advanced( BUILD_WOPENCV )
-set( BUILD_BENCHMARKS false CACHE BOOL "Build OpenCV Examples if true" ) 
+set( BUILD_WOPENCV false CACHE BOOL "Build OpenCV Examples if true" ) 
 if( BUILD_WOPENCV )
     add_subdirectory( examples/opencv )
 endif( BUILD_WOPENCV )
@@ -107,20 +93,33 @@ endforeach( HFILE ${MAINHEADERS} )
 # setup pkg-config files - for linux/unix/os x
 ##
 if( NOT WIN32 )
+##
+# make and setup pkg-config
+##
+mark_as_advanced( PKG_CONFIG_PATHWAY )
+set( PKG_CONFIG_PATH "" CACHE STRING "Set the pkg-config path, othwerwise will figure out" )
+if( NOT PKG_CONFIG_PATH )
+execute_process( COMMAND  pkg-config --variable pc_path pkg-config 
+                 COMMAND  tr ':' '\n' 
+                 COMMAND  head -n 1
+                 OUTPUT_VARIABLE LOCAL_PKG_CONFIG_PATHWAY )
+set( PKG_CONFIG_PATH ${LOCAL_PKG_CONFIG_PATHWAY} )
+endif()
 
-if( NOT ${USEQTHREAD} ) 
-#install( CODE "file( COPY  ${CMAKE_CURRENT_SOURCE_DIR}/raftlib.pc
-#                     DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )" )
-configure_file( "raftlib.pc.in" "raftlib.pc" @ONLY )
+string(REPLACE ":" ";" PREFIX_LIST "${CMAKE_SYSTEM_PREFIX_PATH}")
+list(FIND PREFIX_LIST ${CMAKE_INSTALL_PREFIX}  _index)
 
+if(${_index} GREATER 0)
+    file( MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/pkgconfig ) 
+    set( PKG_CONFIG_PATH ${CMAKE_INSTALL_PREFIX}/pkgconfig )
+    message( WARNING "You should set ${RED}PKG_CONFIG_PATH=${CMAKE_INSTALL_PREFIX}/pkgconfig/:$PKG_CONFIG_PATH ${ColourReset} when installing to non-standard prefix for pkg-config to work correctly!" )
 else()
-install( CODE "file( COPY  ${CMAKE_CURRENT_SOURCE_DIR}/raftlib.pc-qthreads
-                     DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )" )
-install( CODE "file( RENAME ${CMAKE_CURRENT_BINARY_DIR}/raftlib.pc-qthreads ${CMAKE_CURRENT_BINARY_DIR}/raftlib.pc )" )                     
-
-endif( NOT ${USEQTHREAD} )
+    message( STATUS "Setting PKG_CONFIG_PATH to: ${PKG_CONFIG_PATH}" )
+endif()
 
 
-install( CODE "file( COPY  ${CMAKE_CURRENT_BINARY_DIR}/raftlib.pc
-                     DESTINATION ${PKG_CONFIG_PATH} )" )
+
+configure_file( "raftlib.pc.in" "raftlib.pc" @ONLY )
+install( FILES ${CMAKE_CURRENT_BINARY_DIR}/raftlib.pc DESTINATION ${CMAKE_INSTALL_PREFIX}/pkgconfig/ )
+
 endif( NOT WIN32 )                     
