if master doesn't fix issue, will change install prefix for OS X CI to it's own directory....for some reason /usr/local is causing issues on the OSX CI Build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,10 +53,10 @@ jobs:
   MacOS:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@master
       
     - name: 'Run CMake'
-      uses: lukka/run-cmake@v2
+      uses: lukka/run-cmake@master
       with:
         cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
         cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
