fixed a few grammar issues when using the >= operator, when used with only two kernels, the proper behavior is to infer based on the RHS a port count

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -27,7 +27,8 @@ set( TESTAPPS allocate
      allocatePopInternalObject
      allocatePopExternal 
      parallelchain 
-     ksettest 
+     ksettest
+     multiPrint
      fixedMatchTest 
      splitchainRetStruct 
      staticContJoinRetStruct
