interim commit, will finish momentarily

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -16,6 +16,7 @@ set( TESTAPPS allocate
      fitInCacheLine
      isExtClass
      doesntFitInCacheLine
+     internalmath
      isInlineClass
      isExtArray
      isExtAlloc 
