--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,11 +25,11 @@ add_subdirectory(helpers)
 add_definitions( "-DL1D_CACHE_LINE_SIZE=${L1D_LINE_SIZE}" ) 
 
 
-mark_as_advanced( RUN_BENCHMARKS )
-set( RUN_BENCHMARKS false CACHE BOOL "Set flags and variables to synchronize execution" )
-if( RUN_BENCHMARKS )
+mark_as_advanced( BENCHMARK_MODE )
+set( BENCHMARK_MODE false CACHE BOOL "Set flags and variables to synchronize execution" )
+if( BENCHMARK_MODE )
     add_definitions( "-DBENCHMARK=1" )
-endif( RUN_BENCHMARKS )
+endif( BENCHMARK_MODE )
 
 
 ##
