updates to fileio, example cmake, and split off of chunkiterator and fileio into separate files

--- a/examples/general/readfile/CMakeLists.txt
+++ b/examples/general/readfile/CMakeLists.txt
@@ -1,4 +1,4 @@
-list( APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )
+list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake )
 
 set( APP readtest)
 
