remove silly error on copy in recursive struct, also remove internal math test case, leak from another merge request

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -16,7 +16,7 @@ set( TESTAPPS allocate
      fitInCacheLine
      isExtClass
      doesntFitInCacheLine
-     internalmath
+     #internalmath
      isInlineClass
      isExtArray
      isExtAlloc 
