updates to add select statement prototype

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -30,6 +30,7 @@ set( TESTAPPS allocate
      ksettest
      multiPrint
      fixedMatchTest 
+     select_in_t
      splitchainRetStruct 
      staticContJoinRetStruct
      staticJoinRetStruct
