--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -6,48 +6,48 @@ list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake )
 include( CheckSTD )
 
 set( TESTAPPS allocate 
-    portTypeException dynallocate stdlibsupport split 
-     join lambdatest allocate_s foreach peekrange  
-     partitionTest parallel peek 
-     bracketsTest uniform chain 
-     splitchain staticLongSplitChain 
-     staticSplitJoin staticSplitChainJoin 
-     staticJoin staticContJoin 
-     fitInCacheLine
-     isExtClass
-     doesntFitInCacheLine
-     isInlineClass
-     isExtArray
-     isExtAlloc 
-     isInlineNonClass 
-     allocateSendPush 
-     allocateSendRandomPush 
-     allocatePopPush 
-     allocatePopInternal 
-     allocatePopInternalObject
-     allocatePopExternal 
-     parallelchain 
-     ksettest
-     multiPrint
-     fixedMatchTest 
-     select_in_t
-     splitchainRetStruct 
-     staticContJoinRetStruct
-     staticJoinRetStruct
-     staticLongSplitChainRetStruct
-     staticSplitChainJoinRetStruct
-     staticSplitJoinRetStruct 
-     chainMultiplePorts
-     fixedAllocate
-     noPortException
-     twiceAdd
-     disconnectedGraph 
-     allocate_s_string
-     allpush
-     nonTrivialAllocatorPop
-     nonTrivialAllocatorPopExternal
-     vectorAlloc
-     stringAlloc
+    #portTypeException dynallocate stdlibsupport split 
+    # join lambdatest allocate_s foreach peekrange  
+    # partitionTest parallel peek 
+    # bracketsTest uniform chain 
+    # splitchain staticLongSplitChain 
+    # staticSplitJoin staticSplitChainJoin 
+    # staticJoin staticContJoin 
+    # fitInCacheLine
+    # isExtClass
+    # doesntFitInCacheLine
+    # isInlineClass
+    # isExtArray
+    # isExtAlloc 
+    # isInlineNonClass 
+    # allocateSendPush 
+    # allocateSendRandomPush 
+    # allocatePopPush 
+    # allocatePopInternal 
+    # allocatePopInternalObject
+    # allocatePopExternal 
+    # parallelchain 
+    # ksettest
+    # multiPrint
+    # fixedMatchTest 
+    # select_in_t
+    # splitchainRetStruct 
+    # staticContJoinRetStruct
+    # staticJoinRetStruct
+    # staticLongSplitChainRetStruct
+    # staticSplitChainJoinRetStruct
+    # staticSplitJoinRetStruct 
+    # chainMultiplePorts
+    # fixedAllocate
+    # noPortException
+    # twiceAdd
+    # disconnectedGraph 
+    # allocate_s_string
+    # allpush
+    # nonTrivialAllocatorPop
+    # nonTrivialAllocatorPopExternal
+    # vectorAlloc
+    # stringAlloc
      )
 
 if( BUILDRANDOM )
