--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,14 @@ add_subdirectory(helpers)
 ##
 add_definitions( "-DL1D_CACHE_LINE_SIZE=${L1D_LINE_SIZE}" ) 
 
+set( OPTIONAL_MODULES "")
+
 mark_as_advanced( STRING_NAMES )
 set( STRING_NAMES true CACHE BOOL "Default is to use legacy string-named ports." )
 if( STRING_NAMES )
     add_definitions( "-DSTRING_NAMES=1" )
+else()
+    list( APPEND OPTIONAL_MODULES highwayhash )
 endif( STRING_NAMES )
 
 
