last fixes to hh fix, forgot to add one line to the raftlib.pc generator file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,8 @@ set( OPTIONAL_MODULES "")
 mark_as_advanced( STRING_NAMES )
 set( STRING_NAMES true CACHE BOOL "Default is to use legacy string-named ports." )
 if( STRING_NAMES )
-    add_definitions( "-DSTRING_NAMES=1" )
+    set( STRNAMES  "-DSTRING_NAMES=1" )
+    add_definitions( ${STRNAMES} )
 else()
     list( APPEND OPTIONAL_MODULES highwayhash )
 endif( STRING_NAMES )
