fix to copy the raftutility header to the install directory for issue #155

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,8 @@ set( MAINHEADERS
      raftio 
      raftmath 
      raftrandom
-     raftstat )
+     raftstat
+     raftutility )
 foreach( HFILE ${MAINHEADERS} )
  install( FILES ${CMAKE_CURRENT_SOURCE_DIR}/${HFILE}  DESTINATION ${CMAKE_INSTALL_PREFIX}/include )
 endforeach( HFILE ${MAINHEADERS} )
