updates, fixed a few things, broke more, cleaned up

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -31,6 +31,7 @@ set( TESTAPPS allocate
      ksettest
      multiPrint
      fixedMatchTest 
+     poolThreadRaftManip
      select_in_t
      splitchainRetStruct 
      staticContJoinRetStruct
