--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -29,6 +29,7 @@ set( TESTAPPS allocate
     allocatePopExternal 
      parallelchain 
      ksettest
+     ksetContContJoin
      multiPrint
      fixedMatchTest 
      poolThreadRaftManip
