updates to fix kset in general, pulling things from dev branch

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ set(CPP_SRC_FILES
     map.cpp
     mapexception.cpp
     noparallel.cpp
+    parsemap.cpp
     parallelk.cpp
     partition_basic.cpp
     partition_dummy.cpp
