--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,37 +93,4 @@ foreach( HFILE ${MAINHEADERS} )
  install( FILES ${CMAKE_CURRENT_SOURCE_DIR}/${HFILE}  DESTINATION ${CMAKE_INSTALL_PREFIX}/include )
 endforeach( HFILE ${MAINHEADERS} )
 
-##
-# setup pkg-config files - for linux/unix/os x
-##
-if( NOT WIN32 )
-##
-# make and setup pkg-config
-##
-mark_as_advanced( PKG_CONFIG_PATHWAY )
-set( PKG_CONFIG_PATH "" CACHE STRING "Set the pkg-config path, othwerwise will figure out" )
-if( NOT PKG_CONFIG_PATH )
-execute_process( COMMAND  pkg-config --variable pc_path pkg-config 
-                 COMMAND  tr ':' '\n' 
-                 COMMAND  head -n 1
-                 OUTPUT_VARIABLE LOCAL_PKG_CONFIG_PATHWAY )
-set( PKG_CONFIG_PATH ${LOCAL_PKG_CONFIG_PATHWAY} )
-endif()
-
-string(REPLACE ":" ";" PREFIX_LIST "${CMAKE_SYSTEM_PREFIX_PATH}")
-list(FIND PREFIX_LIST ${CMAKE_INSTALL_PREFIX}  _index)
-
-if(${_index} GREATER 0)
-    file( MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/pkgconfig ) 
-    set( PKG_CONFIG_PATH ${CMAKE_INSTALL_PREFIX}/pkgconfig )
-    message( WARNING "You should set ${RED}PKG_CONFIG_PATH=${CMAKE_INSTALL_PREFIX}/pkgconfig/:$PKG_CONFIG_PATH ${ColourReset} when installing to non-standard prefix for pkg-config to work correctly!" )
-else()
-    message( STATUS "Setting PKG_CONFIG_PATH to: ${PKG_CONFIG_PATH}" )
-endif()
-
-
-
-configure_file( "raftlib.pc.in" "raftlib.pc" @ONLY )
-install( FILES ${CMAKE_CURRENT_BINARY_DIR}/raftlib.pc DESTINATION ${CMAKE_INSTALL_PREFIX}/pkgconfig/ )
-
-endif( NOT WIN32 )                     
+include( PkgConfigHelper )
