Substitute yield function by cmake

--- a/raftinc/CMakeLists.txt
+++ b/raftinc/CMakeLists.txt
@@ -1,5 +1,7 @@
 list( APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )
 
+configure_file( sysschedutil.hpp.in sysschedutil.hpp )
+
 
 ##
 # we could just copy the dir over, but
@@ -17,7 +19,8 @@ file( GLOB_RECURSE TEMPLATES    *.tcc   )
 file( GLOB_RECURSE CPP_HEADERS  *.hpp   )
 file( GLOB_RECURSE C_HEADERS    *.h     )
 
-set( INST_INC ${TEMPLATES} ${CPP_HEADERS} ${C_HEADERS} )
+set( INST_INC ${TEMPLATES} ${CPP_HEADERS} ${C_HEADERS}
+     ${PROJECT_BINARY_DIR}/raftinc/sysschedutil.hpp )
 
 foreach( INST_FILE ${INST_INC} )
     install( FILES ${INST_FILE} DESTINATION ${RAFTDIR} )
