--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,14 @@ list( APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake )
 
 include(Colors)
 
+set( RAFT_YIELD "sched_yield" )
+option( USEQTHREAD "Use QThread threading library" false )
 find_package( QThreads )
 if( QTHREAD_FOUND )
     add_definitions("-DQTHREAD_FOUND=1")
+    if( USEQTHREAD )
+        set( RAFT_YIELD "qthread_yield" )
+    endif()
 endif()
 
 ##
