Fix race condition caused by OoO stores

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -50,6 +50,7 @@ set( TESTAPPS allocate
      nonTrivialAllocatorPopExternal
      vectorAlloc
      stringAlloc
+     reduction
      )
 else()
 set( TESTAPPS 
