KernelPortMeta to resolve the dependency
There is a dependency between class kpair and kernel, so their method
implementations have to stay in a source file. By introducing the meta
data structure KernelPortMeta, kpair avoids to invoke the kernel method
directly. Instead, kernel populates the KernelPortMeta structure ahead
and kpair gets kernel pointer, port name, in/out port number from
KernelPortMeta. This way, the mutual dependency between kpair and kernel
is simplified to be kernel depends on kpair.

--- a/raftinc/CMakeLists.txt
+++ b/raftinc/CMakeLists.txt
@@ -1,6 +1,5 @@
 list( APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )
 
-configure_file( sysschedutil.hpp.in sysschedutil.hpp )
 
 
 ##
@@ -19,8 +18,7 @@ file( GLOB_RECURSE TEMPLATES    *.tcc   )
 file( GLOB_RECURSE CPP_HEADERS  *.hpp   )
 file( GLOB_RECURSE C_HEADERS    *.h     )
 
-set( INST_INC ${TEMPLATES} ${CPP_HEADERS} ${C_HEADERS}
-     ${PROJECT_BINARY_DIR}/raftinc/sysschedutil.hpp )
+set( INST_INC ${TEMPLATES} ${CPP_HEADERS} ${C_HEADERS} )
 
 foreach( INST_FILE ${INST_INC} )
     install( FILES ${INST_FILE} DESTINATION ${RAFTDIR} )
