--- a/raftlib.pc.in
+++ b/raftlib.pc.in
@@ -8,6 +8,6 @@ Description: RaftLib C++ Streaming/Data-flow Library
 Version: 2020.6
 Requires: shm affinity demangle cmdargs
 Conflicts: 
-Libs:  -L${libdir} @CMAKE_QTHREAD_LDFLAGS@ @CMAKE_QTHREAD_LIBS@ @CMAKE_THREAD_LIBS_INIT@ @CMAKE_RT_LINK@
+Libs:  -L${libdir} @CMAKE_QTHREAD_LDFLAGS@ @CMAKE_QTHREAD_LIBS@ @CMAKE_UT_LIBS@ @CMAKE_THREAD_LIBS_INIT@ @CMAKE_RT_LINK@
 Libs.private: shm affinity demangle cmdargs
-Cflags:  -std=gnu++14 @STRNAMES@ -DL1D_CACHE_LINE_SIZE=@L1D_LINE_SIZE@ -I${includedir} @CMAKE_QTHREAD_INCS@ @CMAKE_QTHREAD_FLAGS@
+Cflags:  -std=gnu++14 @STRNAMES@ -DL1D_CACHE_LINE_SIZE=@L1D_LINE_SIZE@ -I${includedir} @CMAKE_QTHREAD_INCS@ @CMAKE_QTHREAD_FLAGS@ @CMAKE_UT_INCS@ @CMAKE_UT_FLAGS@
