Enable non-string port name
The support for non-string port name was broken due to some bugs fixed
in this commit.
Now to switch using compiler hashed port names, set `-DSTRING_NAMES=0`
for cmake command.
Please note that the compiler must support C++20 to have this feature.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,9 @@ set( MAINHEADERS
 foreach( HFILE ${MAINHEADERS} )
  install( FILES ${CMAKE_CURRENT_SOURCE_DIR}/${HFILE}  DESTINATION ${CMAKE_INSTALL_PREFIX}/include )
 endforeach( HFILE ${MAINHEADERS} )
+if( NOT STRING_NAMES )
+ install( FILES ${CMAKE_CURRENT_SOURCE_DIR}/git-dep/highwayhash/hh.hpp  DESTINATION ${CMAKE_INSTALL_PREFIX}/include )
+endif()
 
 ##
 # setup pkg-config files - for linux/unix/os x
