Rearranged simple examples.
- Renamed poc to simple to give a more meaningful name
- Removed duplicated examples
- Automated build

--- a/examples/general/CMakeLists.txt
+++ b/examples/general/CMakeLists.txt
@@ -12,4 +12,5 @@ endif( NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows" )
 add_subdirectory( multiply )
 add_subdirectory( readfile )
 add_subdirectory( singlequeue )
+add_subdirectory( simple )
 add_subdirectory( sum )
