ci: add automated release workflow
The new release.yml triggers the release automation. It increases the
version.json if needed and it should create a CHANGELOG.md file. We also
added a git hook to help enforcing the conventional commits specs. A
message for this is added into the CMakeLists.txt.  All this is
documented in the README.md.

Refs: #106

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,3 +136,19 @@ configure_file( "raftlib.pc.in" "raftlib.pc" @ONLY )
 install( FILES ${CMAKE_CURRENT_BINARY_DIR}/raftlib.pc DESTINATION ${CMAKE_INSTALL_PREFIX}/pkgconfig/ )
 
 endif( NOT WIN32 )                     
+
+# Note to contributors
+message("
+   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+   Important Note for Contributors: This repository uses automated releases. 
+   Please follow the Conventional Commits specifications to write the correct 
+   commit messages, ensuring the appropriate release process is triggered. To 
+   enforce this on *nix environments, you can use our commit-msg hook:
+   
+      git config core.hooksPath \"<path_to_this_repo>/.githooks\"
+   
+   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+")
